--- a/templates/generic.html
+++ b/templates/generic.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet" href="{{ STATIC_URL }}style.css" />
-	<title>{% block sitetitle %}Editome: Datatabase of RNA Editing{% endblock %}</title>
+	<title>
+		{% block sitetitle %}Editome: Datatabase of RNA Editing - {% endblock %}
+		{% block pgtitle %}{% endblock %}
+	</title>
 </head>
 
 <body>
@@ -30,15 +33,9 @@
 			{% endblock %}
 		</div>
 	</div>
-	<div id="contentwrap">
-		<div id="pgtitle">
-			<!-- Title of a single page. -->
-			{% block pgtitle %}{% endblock %}
-		</div>
-		<div id="content">
-			<!-- Main content of each page here. -->
-			{% block content %}{% endblock %}
-		</div>
+	<div id="content">
+		<!-- Main content of each page here. -->
+		{% block content %}{% endblock %}
 	</div>
 	<div id="footer">
 		<!-- Footer for all pages here.-->
