Make each .html file extend generic.html. Change e render in views.py to use the right variable. (Was previously changed to find the .css file in the static dir.)

--- a/templates/404.html
+++ b/templates/404.html
@@ -1,10 +1,8 @@
-<html>
-<head>
-	<title>Page not found</title>
-</head>
-<body>
-<a href="http://www.stanford.edu/~gokulr/cgi-bin/django.cgi/about/"><strong>About</strong></a>     <a href="http://www.stanford.edu/~gokulr/cgi-bin/django.cgi/search/"><strong>Search</strong></a>     <a href="http://www.stanford.edu/~gokulr/cgi-bin/django.cgi/download/"><strong>Download</strong></a>     <a href="http://www.stanford.edu/~gokulr/cgi-bin/django.cgi/literature/"><strong>Literature</strong></a>     <a href="http://www.stanford.edu/~gokulr/cgi-bin/django.cgi/contact/"><strong>Contact</strong></a><br>
+{% extends "generic.html" %}
+
+{% block pgtitle %}Page not found{% endblock %}
+
+{% block content %}
 <h1>Page not found</h1>
 <p>Sorry, but the requested page could not be found.</p>
-</body>
-</html>
+{% endblock %}
