--- a/templates/download.html
+++ b/templates/download.html
@@ -1,9 +1,8 @@
-<html>
-<head>
-	<title>Download</title>
-</head>
-<body>
-<a href="http://www.stanford.edu/~gokulr/cgi-bin/django.cgi/about/"><strong>About</strong></a>     <a href="http://www.stanford.edu/~gokulr/cgi-bin/django.cgi/search/"><strong>Search</strong></a>     <a href="http://www.stanford.edu/~gokulr/cgi-bin/django.cgi/download/"><strong>Download</strong></a>     <a href="http://www.stanford.edu/~gokulr/cgi-bin/django.cgi/literature/"><strong>Literature</strong></a>     <a href="http://www.stanford.edu/~gokulr/cgi-bin/django.cgi/contact/"><strong>Contact</strong></a><br>
+{% extends "generic.html" %}
+
+{% block pgtitle %}Download{% endblock %}
+
+{% block content %}
 <p><span style="text-decoration: underline;"><strong>Human</strong></span></p>
 <a href="http://www.stanford.edu/~gokulr/database/Human_AG_all_hg19.txt">All sites</a><br>
 <a href="http://www.stanford.edu/~gokulr/database/Human_AG_Alu_hg19.txt">Alu sites</a><br>
@@ -13,5 +12,4 @@
 <a href="">Mouse sites</a>
 <p><span style="text-decoration: underline;"><strong>Fly</strong></span></p>
 <a href="">Fly sites</a>
-</body>
-</html>
+{% endblock %}
