--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,10 +1,8 @@
-<html>
-<head>
-	<title>Contact</title>
-</head>
-<body>
-<a href="http://www.stanford.edu/~gokulr/cgi-bin/django.cgi/about/"><strong>About</strong></a>     <a href="http://www.stanford.edu/~gokulr/cgi-bin/django.cgi/search/"><strong>Search</strong></a>     <a href="http://www.stanford.edu/~gokulr/cgi-bin/django.cgi/download/"><strong>Download</strong></a>     <a href="http://www.stanford.edu/~gokulr/cgi-bin/django.cgi/literature/"><strong>Literature</strong></a>     <a href="http://www.stanford.edu/~gokulr/cgi-bin/django.cgi/contact/"><strong>Contact</strong></a><br><br>
-This website is maintained by the <a href="http://lilab.stanford.edu/">Li Lab</a> at Stanford University<br>
-Please contact <a href="mailto:gokulr@stanford.edu">us</a> if you have any questions or suggestions for improvement
-</body>
-</html>
+{% extends "generic.html" %}
+
+{% block pgtitle %}Contact{% endblock %}
+
+{% block content %}
+<p>This website is maintained by the <a href="http://lilab.stanford.edu/">Li Lab</a> at Stanford University</p>
+<p>Please contact <a href="mailto:gokulr@stanford.edu">us</a> if you have any questions or suggestions for improvement</p>
+{% endblock %}
