--- a/templates/literature.html
+++ b/templates/literature.html
@@ -1,9 +1,8 @@
-<html>
-<head>
-	<title>Literature</title>
-</head>
-<body>
-<a href="http://www.stanford.edu/~gokulr/cgi-bin/django.cgi/about/"><strong>About</strong></a>     <a href="http://www.stanford.edu/~gokulr/cgi-bin/django.cgi/search/"><strong>Search</strong></a>     <a href="http://www.stanford.edu/~gokulr/cgi-bin/django.cgi/download/"><strong>Download</strong></a>     <a href="http://www.stanford.edu/~gokulr/cgi-bin/django.cgi/literature/"><strong>Literature</strong></a>     <a href="http://www.stanford.edu/~gokulr/cgi-bin/django.cgi/contact/"><strong>Contact</strong></a><br>
+{% extends "generic.html" %}
+
+{% block pgtitle %}Literature{% endblock %}
+
+{% block content %}
 <p><span style="text-decoration: underline;"><strong>Human</strong></span></p>
 <a href="http://www.ncbi.nlm.nih.gov/pubmed/19478186">Li et al 2009. Science</a><br>
 <a href="http://www.ncbi.nlm.nih.gov/pubmed/20547637">Kiran & Baranov 2010. Bioinformatics</a><br>
@@ -18,5 +17,4 @@
 <a href="http://www.ncbi.nlm.nih.gov/pubmed/21179090">Graveley et al 2011. Nature</a><br>
 <a href="http://www.ncbi.nlm.nih.gov/pubmed/22658416">Rodriguez, Menet & Rosbash 2012. Molecular Cell</a><br>
 <a href="http://www.ncbi.nlm.nih.gov/pubmed/23291724">Ramaswami et al 2013. Nature Methods</a><br>
-</body>
-</html>
+{% endblock %}
