--- a/templates/generic.html
+++ b/templates/generic.html
@@ -3,7 +3,7 @@
 <head>
 	<link rel="stylesheet" href="{{ STATIC_URL }}style.css" />
 	<title>
-		{% block sitetitle %}Editome: Datatabase of RNA Editing - {% endblock %}
+		{% block sitetitle %}Editome: RNA Editing Database - {% endblock %}
 		{% block pgtitle %}{% endblock %}
 	</title>
 </head>
