--- a/editdatabase/static/style.css
+++ b/editdatabase/static/style.css
@@ -89,6 +89,78 @@ a:active {
 	padding-bottom: 2em; /* Needs to be the same as height and (margin-top - padding-top) of footer. */
 }
 
+/* Pretty tables: some of the css taken from http://johnsardine.com/freebies/dl-html-css/simple-little-tab/. */
+#content table {
+	background: #EAEBEC;
+	border: #CCC 1px solid;
+	font-size: 14px;
+	margin-bottom: 8px;
+	border-spacing: 0px;
+	
+	-moz-border-radius:3px;
+	-webkit-border-radius:3px;
+	border-radius:3px;
+
+	-moz-box-shadow: 0 1px 2px #d1d1d1;
+	-webkit-box-shadow: 0 1px 2px #d1d1d1;
+	box-shadow: 0 1px 2px #d1d1d1;
+}
+
+#content table tr:first-child th:first-child {
+	-moz-border-radius-topleft: 3px;
+	-webkit-border-top-left-radius: 3px;
+	border-top-left-radius: 3px;
+}
+#content table tr:first-child th:last-child {
+	-moz-border-radius-topright: 3px;
+	-webkit-border-top-right-radius: 3px;
+	border-top-right-radius: 3px;
+}
+
+#content table th {
+	padding:11px 10px 12px 5px;
+	border-top:1px solid #fafafa;
+	border-bottom:1px solid #e0e0e0;
+
+	background: #ededed;
+	background: -webkit-gradient(linear, left top, left bottom, from(#ededed), to(#ebebeb));
+	background: -moz-linear-gradient(top,  #ededed,  #ebebeb);
+}
+
+#content table tr:nth-of-type(2n + 2) {
+	background: #f6f6f6;
+	background: -webkit-gradient(linear, left top, left bottom, from(#f8f8f8), to(#f6f6f6));
+	background: -moz-linear-gradient(top,  #f8f8f8,  #f6f6f6);
+}
+
+#content table tr:nth-of-type(2n + 3) {
+}
+
+#content table td:first-child {
+	border-left: 0;
+}
+
+#content table td {
+	padding-left: 5px;
+}
+
+#content table tr:last-child td {
+	border-bottom:0;
+}
+#content table tr:last-child td:first-child {
+	-moz-border-radius-bottomleft:3px;
+	-webkit-border-bottom-left-radius:3px;
+	border-bottom-left-radius:3px;
+}
+#content table tr:last-child td:last-child {
+	-moz-border-radius-bottomright:3px;
+	-webkit-border-bottom-right-radius:3px;
+	border-bottom-right-radius:3px;
+}
+#content table tr:hover td {
+	background: #DCEBCE;
+}
+
 #footer {
 	font-size: 12px;
 	clear: both;
