--- a/templates/generic.html
+++ b/templates/generic.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link rel="stylesheet" href="{{ STATIC_URL }}bootstrap.css" />
 	<link rel="stylesheet" href="{{ STATIC_URL }}style.css" />
 	<title>
 		{% block sitetitle %}Editome: RNA Editing Database - {% endblock %}
