--- a/templates/search_form.html
+++ b/templates/search_form.html
@@ -34,15 +34,17 @@
 	}
 </script>
 
+<legend>Please choose a species and optionally enter a gene name and/or chromosomal location(hg19/mm9/dm3).</legend>
+
 {% if error2 %}
-	<p style="color: red;">Resulting sites greater than 5000, please narrow search!</p>
+	<div class="alert alert-error">Resulting sites greater than 5000, please narrow search!</div>
 {% endif %}
-<p>Please choose a species and optionally enter a gene name and/or chromosomal location(hg19/mm9/dm3).</p>
+
 {% if error %}
-	<p style="color: red;">Please input a complete chromosomal location!</p>
+	<div class="alert alert-error">Please input a complete chromosomal location!</div>
 {% endif %}
 {% if error3 %}
-	<p style="color: red;">Please choose a species!</p>
+	<div class="alert alert-error">Please choose a species!</div>
 {% endif %}
 <form action="" method="get">
 	Species: <select name='species' onchange="fillSelect(this.value,this.form['chr']);this.form['alu'].disabled = (this.value != 'human');this.form['repnonalu'].disabled = (this.value == 'fly');this.form['nonrep'].disabled = (this.value == 'fly')">
@@ -56,8 +58,8 @@
 		</select> Start:<input type="text" name ="start"> End:<input type="text" name ="end"><br>
 	Gene Name: <input type="text" name ="gene"><br>
 	Genic location: <input type="checkbox" id="allloc" checked="yes">All  <input type="checkbox" name="nonsyn" value="nonsyn" onClick="unCheck(this)">Nonsynonymous  <input type="checkbox" name="syn" value="syn" onClick="unCheck(this)">Synonymous  <input type="checkbox" name="5utr" value="5utr" onClick="unCheck(this)">5'UTR  <input type="checkbox" name="3utr" value="3utr" onClick="unCheck(this)">3'UTR  <input type="checkbox" name="ncrna" value="ncrna" onClick="unCheck(this)">ncRNA  <input type="checkbox" name="intronic" value="intronic" onClick="unCheck(this)">Intronic  <input type="checkbox" name="intergenic" value="intergenic" onClick="unCheck(this)">Intergenic<br>
-	Repetitive Element: <input type="checkbox" id="allrpt" Checked="yes">All  <input type="checkbox" name="alu" value="alu" onClick="unCheck2(this)">Alu  <input type="checkbox" name="repnonalu" value="repnonalu" onClick="unCheck2(this)">Repetitive non-Alu  <input type="checkbox" name="nonrep" value="nonrep" onClick="unCheck2(this)">Nonrepetitive<br>
-	<input type="submit" value="Search">
+	Repetitive Element: <input type="checkbox" id="allrpt" Checked="yes">All <input type="checkbox" name="alu" value="alu" onClick="unCheck2(this)">Alu  <input type="checkbox" name="repnonalu" value="repnonalu" onClick="unCheck2(this)">Repetitive non-Alu  <input type="checkbox" name="nonrep" value="nonrep" onClick="unCheck2(this)">Nonrepetitive<br>
+	<button type="submit" class="btn">Search</button>
 </form>
 
 {% endblock %}
