--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -7,7 +7,7 @@
 
 {% if sites %}
 	<form action="/search/" method="get">
-		<input type="submit" value="Back"> <!-- I added this in in case the list of sites is long. But it looks kind of weird so you can remove it if you want. -->
+	<button type="submit" class="btn">New Search</button> <!-- I added this in in case the list of sites is long. But it looks kind of weird so you can remove it if you want. -->
 	</form>
 	<p>Found {{sites|length}} site{{ sites|pluralize}}:</p>
 	<table>
@@ -19,10 +19,13 @@
 	</tbody>
 	</table>
 {% else %}
-	<p> No sites found!</p>
+	<div class="alert alert-block">
+		<h4> No sites found!</h4>
+		Sorry! Perhaps you could try another search. 
+	</div>
 {% endif %}
 <form action="/search/" method="get">
-<input type="submit" value="Back">
+<button type="submit" class="btn">Back</button>
 </form>
 {% endblock %}
 
