--- a/editdatabase/static/style.css
+++ b/editdatabase/static/style.css
@@ -58,15 +58,21 @@ a:active {
 	text-align: center;
 }
 
-#nav li {
-	/*display: inline-block;*/
-}
-
 #nav a {
+	font-size: 18px;
 	color: #87D341;
 	display: inline-block;
 	width: 120px;
-	padding: 6px;
+	padding: 10px 6px;
+	font-weight: bold;
+	
+	/* Rounded top corners - uses css3 */
+	-moz-border-radius-topright: 2px;
+	-webkit-border-top-right-radius: 2px;
+	border-top-right-radius: 2px;
+	-moz-border-radius-topleft: 2px;
+	-webkit-border-top-left-radius: 2px;
+	border-top-left-radius: 2px;
 }
 
 #nav .active {
@@ -88,6 +94,11 @@ a:active {
 	text-align: left;
 	padding-bottom: 2em; /* Needs to be the same as height and (margin-top - padding-top) of footer. */
 	line-height: 26px;
+	
+	/* Rounded corners - uses css3 */
+	-moz-border-radius:4px;
+	-webkit-border-radius:4px;
+	border-radius:4px;
 }
 
 #content p {
@@ -182,7 +193,7 @@ a:active {
 	z-index: 10;
 	height: 2em; /* footer positioning */
 	margin-top: -3em; /* footer positioning */
-	background-color: #C7C7C7;
+	background-color: #DFDFDF;
 	padding-top: 1em; /* footer positioning */
 }
 
