Minor readability changes to table header

--- a/editdatabase/static/style.css
+++ b/editdatabase/static/style.css
@@ -139,8 +139,8 @@ a:active {
 	border-bottom:1px solid #e0e0e0;
 
 	background: #ededed;
-	background: -webkit-gradient(linear, left top, left bottom, from(#ededed), to(#ebebeb));
-	background: -moz-linear-gradient(top,  #ededed,  #ebebeb);
+	background: -webkit-gradient(linear, left top, left bottom, from(#ededed), to(#f3f3f3));
+	background: -moz-linear-gradient(top,  #ededed,  #f3f3f3);
 }
 
 #content table tr:nth-of-type(2n + 2) {
