--- a/templates/generic.html
+++ b/templates/generic.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<link rel="stylesheet" href="{{ STATIC_URL }}bootstrap.css" />
-	<link rel="stylesheet" href="{{ STATIC_URL }}style.css" />
+	<link rel="stylesheet" href="{{ STATIC_URL }}bootstrap.css" type="text/css" />
+	<link rel="stylesheet" href="{{ STATIC_URL }}style.css" type="text/css" />
 	<title>
 		{% block sitetitle %}Editome: RNA Editing Database - {% endblock %}
 		{% block pgtitle %}{% endblock %}
@@ -20,11 +20,11 @@
 			</div>
 			<div id="nav">
 				{% block nav %}
-					<a href="/about/"{% if request.path == '/about/' %} class="active"{% endif %}>About</a>
-					<a href="/search/"{% if request.path == '/search/' %} class="active"{% endif %}>Search</a>
-					<a href="/download/"{% if request.path == '/download/' %} class="active"{% endif %}>Download</a>
-					<a href="/literature/"{% if request.path == '/literature/' %} class="active"{% endif %}>Literature</a>
-					<a href="/contact/"{% if request.path == '/contact/' %} class="active"{% endif %}>Contact</a>
+					<a href="http://www.stanford.edu/~gokulr/cgi-bin/django.cgi/about/"{% if request.path == '/~gokulr/cgi-bin/django.cgi/about/' %} class="active"{% endif %}>About</a>
+					<a href="http://www.stanford.edu/~gokulr/cgi-bin/django.cgi/search/"{% if request.path == '/~gokulr/cgi-bin/django.cgi/search/' %} class="active"{% endif %}>Search</a>
+					<a href="http://www.stanford.edu/~gokulr/cgi-bin/django.cgi/download/"{% if request.path == '/~gokulr/cgi-bin/django.cgi/download/' %} class="active"{% endif %}>Download</a>
+					<a href="http://www.stanford.edu/~gokulr/cgi-bin/django.cgi/literature/"{% if request.path == '/~gokulr/cgi-bin/django.cgi/literature/' %} class="active"{% endif %}>Literature</a>
+					<a href="http://www.stanford.edu/~gokulr/cgi-bin/django.cgi/contact/"{% if request.path == '/~gokulr/cgi-bin/django.cgi/contact/' %} class="active"{% endif %}>Contact</a>
 				{% endblock %}
 			</div>
 		</div>
