--- a/templates/literature.html
+++ b/templates/literature.html
@@ -4,17 +4,30 @@
 
 {% block content %}
 <p><span style="text-decoration: underline;"><strong>Human</strong></span></p>
-<a href="http://www.ncbi.nlm.nih.gov/pubmed/19478186">Li et al 2009. Science</a><br>
-<a href="http://www.ncbi.nlm.nih.gov/pubmed/20547637">Kiran & Baranov 2010. Bioinformatics</a><br>
-<a href="http://www.ncbi.nlm.nih.gov/pubmed/21960545">Bahn et al 2012. Genome Research</a><br>
-<a href="http://www.ncbi.nlm.nih.gov/pubmed/22327324">Peng et al 2023. Nature Biotechnology</a><br>
-<a href="http://www.ncbi.nlm.nih.gov/pubmed/22832026">Kleinman, Adoue & Majewski 2012. RNA</a><br>
-<a href="http://www.ncbi.nlm.nih.gov/pubmed/22484847">Ramaswami et al 2012. Nature Methods</a><br>
-<a href="http://www.ncbi.nlm.nih.gov/pubmed/23291724">Ramaswami et al 2013. Nature Methods</a><br>
+<a href="http://www.ncbi.nlm.nih.gov/pubmed/1717158" target="_blank">Sommer et al. 1991. Cell</a><br>
+<a href="http://www.ncbi.nlm.nih.gov/pubmed/9153397" target="_blank">Burns et al. 1997. Nature</a><br>
+<a href="http://www.ncbi.nlm.nih.gov/pubmed/10828597" target="_blank">Barbon & Barlati 2000. Cytogenetics and Cell Genetics</a><br>
+<a href="http://www.ncbi.nlm.nih.gov/pubmed/15361858" target="_blank">Bhalla et al. 2004. Nature Structural and Molecular Biology</a><br>
+<a href="http://www.ncbi.nlm.nih.gov/pubmed/15797904" target="_blank">Clutterbuck et al. 2005. Bioinformatics</a><br>
+<a href="http://www.ncbi.nlm.nih.gov/pubmed/15731336" target="_blank">Levanon et al. 2005. Nucleic Acids Research</a><br>
+<a href="http://www.ncbi.nlm.nih.gov/pubmed/17369310" target="_blank">Ohlson et al. 2007. RNA</a><br>
+<a href="http://www.ncbi.nlm.nih.gov/pubmed/18772245" target="_blank">Gommans et al. 2008. RNA</a><br>
+
+<a href="http://www.ncbi.nlm.nih.gov/pubmed/19478186" target="_blank">Li et al. 2009. Science</a><br>
+<a href="http://www.ncbi.nlm.nih.gov/pubmed/20547637" target="_blank">Kiran & Baranov 2010. Bioinformatics</a><br>
+<a href="http://www.ncbi.nlm.nih.gov/pubmed/20835228" target="_blank">Sakurai et al. 2010. Nature Chemical Biology</a><br>
+<a href="http://www.ncbi.nlm.nih.gov/pubmed/22028664" target="_blank">Carmi, Borukhov & Levanon 2011. PLoS Genetics</a><br>
+<a href="http://www.ncbi.nlm.nih.gov/pubmed/21960545" target="_blank">Bahn et al. 2012. Genome Research</a><br>
+<a href="http://www.ncbi.nlm.nih.gov/pubmed/22327324" target="_blank">Peng et al. 2012. Nature Biotechnology</a><br>
+<a href="http://www.ncbi.nlm.nih.gov/pubmed/22130986" target="_blank">Chepelev 2012. Methods in Molecular Biology</a><br>
+<a href="http://www.ncbi.nlm.nih.gov/pubmed/22832026" target="_blank">Kleinman, Adoue & Majewski 2012. RNA</a><br>
+<a href="http://www.ncbi.nlm.nih.gov/pubmed/22484847" target="_blank">Ramaswami et al. 2012. Nature Methods</a><br>
+<a href="http://www.ncbi.nlm.nih.gov/pubmed/23291724" target="_blank">Ramaswami et al. 2013. Nature Methods</a><br>
 <p><span style="text-decoration: underline;"><strong>Mouse</strong></span></p>
-<a href="http://www.ncbi.nlm.nih.gov/pubmed/22524474">Danecek et al 2012. Genome Biology</a><br>
+<a href="http://www.ncbi.nlm.nih.gov/pubmed/16940548" target="_blank">Neeman et al. 2006. RNA</a><br>
+<a href="http://www.ncbi.nlm.nih.gov/pubmed/22524474" target="_blank">Danecek et al. 2012. Genome Biology</a><br>
 <p><span style="text-decoration: underline;"><strong>Fly</strong></span></p>
-<a href="http://www.ncbi.nlm.nih.gov/pubmed/21179090">Graveley et al 2011. Nature</a><br>
-<a href="http://www.ncbi.nlm.nih.gov/pubmed/22658416">Rodriguez, Menet & Rosbash 2012. Molecular Cell</a><br>
-<a href="http://www.ncbi.nlm.nih.gov/pubmed/23291724">Ramaswami et al 2013. Nature Methods</a><br>
+<a href="http://www.ncbi.nlm.nih.gov/pubmed/21179090" target="_blank">Graveley et al. 2011. Nature</a><br>
+<a href="http://www.ncbi.nlm.nih.gov/pubmed/22658416" target="_blank">Rodriguez, Menet & Rosbash 2012. Molecular Cell</a><br>
+<a href="http://www.ncbi.nlm.nih.gov/pubmed/23291724" target="_blank">Ramaswami et al. 2013. Nature Methods</a><br>
 {% endblock %}
