--- a/templates/download.html
+++ b/templates/download.html
@@ -9,7 +9,7 @@
 <a href="http://www.stanford.edu/~gokulr/database/Human_AG_RepetitiveNonAlu_hg19.txt">Repetitive non-Alu sites</a><br>
 <a href="http://www.stanford.edu/~gokulr/database/Human_AG_NonRepetitive_hg19.txt">Non-repetitive sites</a>
 <p><span style="text-decoration: underline;"><strong>Mouse</strong></span></p>
-<a href="">Mouse sites</a>
+<a href="http://www.stanford.edu/~gokulr/database/Mouse_AG_all_mm9.txt">Mouse sites</a>
 <p><span style="text-decoration: underline;"><strong>Fly</strong></span></p>
-<a href="">Fly sites</a>
+<a href="http://www.stanford.edu/~gokulr/database/Fly_AG_all_dm3.txt">Fly sites</a>
 {% endblock %}
