--- a/templates/about.html
+++ b/templates/about.html
@@ -3,7 +3,28 @@
 {% block pgtitle %}About{% endblock %}
 
 {% block content %}
-<p><a href="http://en.wikipedia.org/wiki/RNA_editing">RNA editing</a> is the post-transcriptional modification of RNA nucleotides from their genome encoded sequence. The most common type of editing in metazoans is deamination of Adenosine into Inosine catalyzed by the ADAR family of proteins.</p>
-<p>This database aims to present a comprehensive collection of A-to-I editing sites in human, mouse, and fly transcripts. </p>
+<p><a href="http://en.wikipedia.org/wiki/RNA_editing">RNA editing</a> is the post-transcriptional modification of RNA nucleotides from their genome encoded sequence. The most common type of editing in metazoans is deamination of Adenosine into Inosine catalyzed by the ADAR family of proteins. Subsequently, Inosine is interpreted as Guanosine by the cellular machinery.</p>
+<p>The development of high-throughput sequencing technologies has enabled the transcriptome-wide identification of A-to-I editing sites. This database aims to present a comprehensive collection of A-to-I editing sites in human, mouse, and fly transcripts. Useful annotations were incorporated as described below:</p>
+<p> <b>Search page:</b></p>
+<img src = "http://www.stanford.edu/~gokulr/database/search.png" alt="Search" width = "900">
+<p><b>Species</b>: It is mandatory to select a species (human, mouse, or fly)<br>
+<b>Chromosome, Start, End</b>: Search by location in the genome<br>
+<b>Gene Name</b>: Search by gene<br>
+<b>Genic Location / Repetitive Element</b>: Choose desired features<br>
+<b>Editing Conservation</b>: Filter by observation of editing in other organisms</p>
+<p> <b>Results page:</b></p>
+<img src = "http://www.stanford.edu/~gokulr/database/results.png" alt="Results" width = "900">
+<p><b>Chromosome</b>: chromosome in reference genome<br>
+<b>Position</b>: coordinate on chromosome<br>
+<b>Gene</b>: overlapping gene<br>
+<b>Strand</b>: + for positive strand, - for negative strand (with respect to reference genome)<br>
+<b>Annotation</b>: Genic location<br>
+<b>Annotation2</b>: If edit is located with a coding sequence, the predicted amino acid variation. If edit is not within a coding sequence, the genic location.<br>
+<b>Genomic Location</b>: Specifies whether the editing site is located in an Alu repeat, non-Alu repeat, or nonrepetitive region of the genome. Clicking on this field links to the editing site in the UCSC browser, showing the overlapping genes and genomic nucleotide conservation:</p>
+<img src = "http://www.stanford.edu/~gokulr/database/ucsc.png" alt="UCSC" width = "900">
+<p><b>Conservation of Edit</b>: Species in which editing is known to be conserved. Clicking on this field links to the editing site in the UCSC browser for the selected species, showing the overlapping genes and genomic nucleotide conservation<br>
+<b>Reference</b>: Study in which the editing site was identified. Clicking on this link redirects to the pubmed reference.<br>
+<b>RNA-seq Data</b>: If RNA-seq data is available for this editing site, clicking on this link will provide further information:</p>
+<img src = "http://www.stanford.edu/~gokulr/database/rnainfo.png" alt="RNAseqInfo" width = "900">
 {% endblock %}
 
