--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,5 +4,5 @@
 
 {% block content %}
 <p>This website is maintained by the <a href="http://lilab.stanford.edu/">Li Lab</a> at Stanford University</p>
-<p>Please contact <a href="mailto:gokulr@stanford.edu">us</a> if you have any questions or suggestions for improvement</p>
+<p>Please contact <a href="mailto:gokulr@stanford.edu">us</a> if you have any questions or suggestions for improvement.</p>
 {% endblock %}
