added Bahn into human rna-seq data, also included rna-seq data in download

--- a/templates/download.html
+++ b/templates/download.html
@@ -7,9 +7,12 @@
 <a href="http://www.stanford.edu/~gokulr/database/Human_AG_all_hg19.txt">All sites</a><br>
 <a href="http://www.stanford.edu/~gokulr/database/Human_AG_Alu_hg19.txt">Alu sites</a><br>
 <a href="http://www.stanford.edu/~gokulr/database/Human_AG_RepetitiveNonAlu_hg19.txt">Repetitive non-Alu sites</a><br>
-<a href="http://www.stanford.edu/~gokulr/database/Human_AG_NonRepetitive_hg19.txt">Non-repetitive sites</a>
+<a href="http://www.stanford.edu/~gokulr/database/Human_AG_NonRepetitive_hg19.txt">Non-repetitive sites</a><br>
+<a href="http://www.stanford.edu/~gokulr/database/human_hg19_rnaseqinfo.txt">RNA-seq data</a>
 <p><span style="text-decoration: underline;"><strong>Mouse</strong></span></p>
-<a href="http://www.stanford.edu/~gokulr/database/Mouse_AG_all_mm9.txt">Mouse sites</a>
+<a href="http://www.stanford.edu/~gokulr/database/Mouse_AG_all_mm9.txt">Mouse sites</a><br>
+<a href="http://www.stanford.edu/~gokulr/database/mouse_mm9_rnaseqinfo.txt">RNA-seq data</a>
 <p><span style="text-decoration: underline;"><strong>Fly</strong></span></p>
-<a href="http://www.stanford.edu/~gokulr/database/Fly_AG_all_dm3.txt">Fly sites</a>
+<a href="http://www.stanford.edu/~gokulr/database/Fly_AG_all_dm3.txt">Fly sites</a><br>
+<a href="http://www.stanford.edu/~gokulr/database/fly_dm3_rnaseqinfo.txt">RNA-seq data</a>
 {% endblock %}
